# cluebot

./: .env.example  .gitignore  Cargo.toml  README.md  README_ZH.md
crates/agent/discovery-strategy/: Cargo.toml
crates/agent/discovery-strategy/src/: lib.rs
crates/agent/strategy-creation/: Cargo.toml
crates/agent/strategy-optimization/: Cargo.toml
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/extensions/channels/email/: Cargo.toml
crates/extensions/channels/email/src/: lib.rs
crates/extensions/email/: Cargo.toml
crates/extensions/lark/: Cargo.toml
crates/extensions/markets/binance/: Cargo.toml
crates/extensions/markets/okx/: Cargo.toml
crates/extensions/markets/okx/src/: lib.rs
crates/llm-gateway/: Cargo.toml
crates/llm-gateway/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/strategies/volatility-increase-short-selling/: Cargo.toml
crates/strategies/volatility-increase-short-selling/src/: lib.rs
